# Trainly2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Trainly/: CMakeLists.txt  TrainlyNative.aps  TrainlyNative.rc  resource.h
Trainly/data/db/: chunk.txt
Trainly/data/font/: roboto-16.sft
Trainly/data/model/chunk/desert/: mdl_desert.gltf
Trainly/data/model/chunk/farm/: mdl_farm.gltf
Trainly/data/model/rail/: Tory.fbx
Trainly/data/model/train/: mdl_train.gltf
Trainly/data/shader/: lit_pixel.hlsl  lit_vertex.hlsl  unlit_pixel.hlsl  unlit_vertex.hlsl
Trainly/src/: Input.h  InputManager.h  Timer.cpp  Timer.h  Tween.h  main.cpp  stdafx.h
Trainly/src/game/: Game.cpp  Game.h
Trainly/src/graphics/: Buffer.h  Camera.cpp  Camera.h  ConstantBuffer.h  DataTypes.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h  VertexBuffer.h
Trainly/src/graphics/material/: Material.h  UnlitMaterial.h
Trainly/src/graphics/shaders/: PixelShader.cpp  PixelShader.h  VertexShader.cpp  VertexShader.h
Trainly/src/io/: ResourceManager.cpp  ResourceManager.h
Trainly/src/io/formats/: Mesh.h  Model.h  Vertex.h
Trainly/src/utils/: BinaryIO.cpp  BinaryIO.h  StringConverter.cpp  StringConverter.h
tools/DataPacker/: CMakeLists.txt
tools/DataPacker/src/: main.cpp
tools/DataPacker/src/compilers/: BaseAssetCompiler.h  ModelCompiler.cpp  ModelCompiler.h  ShaderCompiler.cpp  ShaderCompiler.h  TextureCompiler.cpp  TextureCompiler.h
tools/DataPacker/src/utils/: BinaryIO.h
